--- a/root/package.json
+++ b/root/package.json
@@ -14,10 +14,13 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@shopify/react-native-skia": "^1.4.2",
     "react": "18.3.1",
     "react-native": "0.75.2",
-    "react-native-chart-kit": "^6.12.0",
+    "react-native-date-picker": "^5.0.7",
     "react-native-gesture-handler": "^2.20.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "^3.15.4",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-svg": "^15.7.1",
