--- a/root/package.json
+++ b/root/package.json
@@ -25,7 +25,9 @@
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-svg": "^15.7.1",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-svg-charts": "^5.4.0",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-video": "^6.6.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
