--- a/root/package.json
+++ b/root/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.75.2",
     "react-native-date-picker": "^5.0.7",
     "react-native-gesture-handler": "^2.20.0",
+    "react-native-gifted-charts": "^1.4.44",
     "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.15.4",
